// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PluggableColumnBarCharts > optional stacking > should cut out measures tail when getting many measures, no category and one stack 1`] = `
{
  "buckets": [
    {
      "items": [
        {
          "aggregation": null,
          "attribute": "aazb6kroa3iC",
          "localIdentifier": "m1",
          "showInPercent": null,
          "showOnSecondaryAxis": null,
          "type": "metric",
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [],
      "localIdentifier": "view",
    },
    {
      "items": [
        {
          "aggregation": null,
          "attribute": "attr.owner.department",
          "dfRef": {
            "uri": "a1/df",
          },
          "localIdentifier": "a1",
          "type": "attribute",
        },
      ],
      "localIdentifier": "stack",
    },
  ],
  "filters": {
    "items": [],
    "localIdentifier": "filters",
  },
  "properties": {},
  "uiConfig": {
    "buckets": {
      "filters": {
        "accepts": [
          "attribute",
          "date",
        ],
        "allowsReordering": false,
        "enabled": true,
        "isShowInPercentEnabled": false,
        "itemsLimit": 20,
        "itemsLimitByType": {
          "date": 1,
        },
      },
      "measures": {
        "accepts": [
          "metric",
          "fact",
          "attribute",
        ],
        "allowsDuplicateItems": true,
        "allowsReordering": true,
        "allowsSwapping": true,
        "canAddItems": false,
        "enabled": true,
        "icon": "local:column/bucket-title-measures.svg",
        "isShowInPercentEnabled": false,
        "isShowInPercentVisible": true,
        "isShowOnSecondaryAxisVisible": true,
        "itemsLimit": 40,
        "title": "Metrics",
        "warningMessage": "To add additional metric, remove <span class="attr-field-icon" /> from <span class="stack-by">stack by</span>",
      },
      "stack": {
        "accepts": [
          "attribute",
        ],
        "allowsReordering": false,
        "allowsSwapping": true,
        "canAddItems": true,
        "enabled": true,
        "icon": "local:column/bucket-title-stack.svg",
        "isShowInPercentEnabled": false,
        "itemsLimit": 1,
        "title": "Stack by",
      },
      "view": {
        "accepts": [
          "attribute",
          "date",
        ],
        "allowsReordering": true,
        "allowsSwapping": true,
        "canAddItems": true,
        "enabled": true,
        "icon": "local:column/bucket-title-view.svg",
        "isShowInPercentEnabled": false,
        "itemsLimit": 2,
        "itemsLimitByType": {
          "date": 1,
        },
        "title": "View by",
      },
    },
    "exportConfig": {
      "supported": true,
    },
    "openAsReport": {
      "supported": true,
    },
    "optionalStacking": {
      "stackMeasures": false,
      "supported": true,
    },
    "recommendations": {
      "comparison": true,
      "overTimeComparison": false,
      "percent": false,
      "previousPeriod": false,
      "supportsFilteringRecommendation": true,
      "trending": true,
    },
    "supportedOverTimeComparisonTypes": [
      "same_period_previous_year",
      "previous_period",
    ],
    "supportsChartFill": true,
  },
}
`;

exports[`PluggableColumnBarCharts > optional stacking > should place third attribute to stack bucket 1`] = `
{
  "buckets": [
    {
      "items": [
        {
          "aggregation": null,
          "attribute": "aazb6kroa3iC",
          "localIdentifier": "m1",
          "showInPercent": null,
          "showOnSecondaryAxis": null,
          "type": "metric",
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "aggregation": null,
          "attribute": "attr.owner.department",
          "dfRef": {
            "uri": "a1/df",
          },
          "localIdentifier": "a1",
          "type": "attribute",
        },
        {
          "aggregation": null,
          "attribute": "attr.stage.iswon",
          "dfRef": {
            "uri": "a2/df",
          },
          "localIdentifier": "a2",
          "type": "attribute",
        },
      ],
      "localIdentifier": "view",
    },
    {
      "items": [
        {
          "attribute": "attr.owner.region",
          "dfRef": {
            "uri": "a3/df",
          },
          "localIdentifier": "a3",
          "type": "attribute",
        },
      ],
      "localIdentifier": "stack",
    },
  ],
  "filters": {
    "items": [
      {
        "aggregation": null,
        "attribute": "attr.owner.department",
        "filters": [
          {
            "attribute": "attr.owner.department",
            "displayFormRef": {
              "uri": "owner/attribute/df/uri",
            },
            "isInverted": false,
            "selectedElements": [
              {
                "title": "string",
                "uri": "string",
              },
            ],
            "totalElementsCount": 10,
          },
        ],
        "localIdentifier": "a1",
        "type": "attribute",
      },
      {
        "aggregation": null,
        "attribute": "attr.stage.iswon",
        "filters": [
          {
            "attribute": "attr.stage.iswon",
            "displayFormRef": {
              "uri": "iswon/attribute/df/uri",
            },
            "isInverted": true,
            "selectedElements": [
              {
                "title": "string",
                "uri": "string",
              },
            ],
            "totalElementsCount": 10,
          },
        ],
        "localIdentifier": "a2",
        "type": "attribute",
      },
      {
        "attribute": "attr.owner.region",
        "filters": [
          {
            "attribute": "attr.owner.region",
            "displayFormRef": {
              "uri": "owner/attribute/df/uri",
            },
            "isInverted": true,
            "selectedElements": [],
            "totalElementsCount": 10,
          },
        ],
        "localIdentifier": "a3",
        "type": "attribute",
      },
    ],
    "localIdentifier": "filters",
  },
  "properties": {},
  "uiConfig": {
    "buckets": {
      "filters": {
        "accepts": [
          "attribute",
          "date",
        ],
        "allowsReordering": false,
        "enabled": true,
        "isShowInPercentEnabled": false,
        "itemsLimit": 20,
        "itemsLimitByType": {
          "date": 1,
        },
      },
      "measures": {
        "accepts": [
          "metric",
          "fact",
          "attribute",
        ],
        "allowsDuplicateItems": true,
        "allowsReordering": true,
        "allowsSwapping": true,
        "canAddItems": false,
        "enabled": true,
        "icon": "local:column/bucket-title-measures.svg",
        "isShowInPercentEnabled": false,
        "isShowInPercentVisible": true,
        "isShowOnSecondaryAxisVisible": true,
        "itemsLimit": 40,
        "title": "Metrics",
        "warningMessage": "To add additional metric, remove <span class="attr-field-icon" /> from <span class="stack-by">stack by</span>",
      },
      "stack": {
        "accepts": [
          "attribute",
        ],
        "allowsReordering": false,
        "allowsSwapping": true,
        "canAddItems": true,
        "enabled": true,
        "icon": "local:column/bucket-title-stack.svg",
        "isShowInPercentEnabled": false,
        "itemsLimit": 1,
        "title": "Stack by",
      },
      "view": {
        "accepts": [
          "attribute",
          "date",
        ],
        "allowsReordering": true,
        "allowsSwapping": true,
        "canAddItems": true,
        "enabled": true,
        "icon": "local:column/bucket-title-view.svg",
        "isShowInPercentEnabled": false,
        "itemsLimit": 2,
        "itemsLimitByType": {
          "date": 1,
        },
        "title": "View by",
      },
    },
    "exportConfig": {
      "supported": true,
    },
    "openAsReport": {
      "supported": true,
    },
    "optionalStacking": {
      "stackMeasures": false,
      "supported": true,
    },
    "recommendations": {
      "comparison": false,
      "overTimeComparison": false,
      "percent": false,
      "previousPeriod": false,
      "supportsFilteringRecommendation": true,
      "trending": false,
    },
    "supportedOverTimeComparisonTypes": [
      "same_period_previous_year",
      "previous_period",
    ],
    "supportsChartFill": true,
  },
}
`;

exports[`PluggableColumnBarCharts > optional stacking > should return reference point without Date in stacks 1`] = `
{
  "buckets": [
    {
      "items": [
        {
          "aggregation": null,
          "attribute": "aazb6kroa3iC",
          "localIdentifier": "m1",
          "showInPercent": null,
          "showOnSecondaryAxis": null,
          "type": "metric",
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "aggregation": null,
          "attribute": "attr.datedataset",
          "dateDatasetRef": {
            "identifier": "ds1",
          },
          "localIdentifier": "a1",
          "showInPercent": null,
          "type": "date",
        },
        {
          "aggregation": null,
          "attribute": "attr.stage.iswon",
          "dfRef": {
            "uri": "a2/df",
          },
          "localIdentifier": "a2",
          "type": "attribute",
        },
      ],
      "localIdentifier": "view",
    },
    {
      "items": [],
      "localIdentifier": "stack",
    },
  ],
  "filters": {
    "items": [],
    "localIdentifier": "filters",
  },
  "properties": {},
  "uiConfig": {
    "buckets": {
      "filters": {
        "accepts": [
          "attribute",
          "date",
        ],
        "allowsReordering": false,
        "enabled": true,
        "isShowInPercentEnabled": false,
        "itemsLimit": 20,
        "itemsLimitByType": {
          "date": 1,
        },
      },
      "measures": {
        "accepts": [
          "metric",
          "fact",
          "attribute",
        ],
        "allowsDuplicateItems": true,
        "allowsReordering": true,
        "allowsSwapping": true,
        "canAddItems": true,
        "enabled": true,
        "icon": "local:column/bucket-title-measures.svg",
        "isShowInPercentEnabled": true,
        "isShowInPercentVisible": true,
        "isShowOnSecondaryAxisVisible": true,
        "itemsLimit": 40,
        "title": "Metrics",
      },
      "stack": {
        "accepts": [
          "attribute",
        ],
        "allowsReordering": false,
        "allowsSwapping": true,
        "canAddItems": true,
        "enabled": true,
        "icon": "local:column/bucket-title-stack.svg",
        "isShowInPercentEnabled": false,
        "itemsLimit": 1,
        "title": "Stack by",
      },
      "view": {
        "accepts": [
          "attribute",
          "date",
        ],
        "allowsReordering": true,
        "allowsSwapping": true,
        "canAddItems": true,
        "enabled": true,
        "icon": "local:column/bucket-title-view.svg",
        "isShowInPercentEnabled": false,
        "itemsLimit": 2,
        "itemsLimitByType": {
          "date": 1,
        },
        "title": "View by",
      },
    },
    "exportConfig": {
      "supported": true,
    },
    "openAsReport": {
      "supported": true,
    },
    "optionalStacking": {
      "stackMeasures": false,
      "supported": true,
    },
    "recommendations": {
      "comparison": false,
      "overTimeComparison": false,
      "percent": false,
      "previousPeriod": false,
      "supportsFilteringRecommendation": true,
      "trending": false,
    },
    "supportedOverTimeComparisonTypes": [
      "same_period_previous_year",
      "previous_period",
    ],
    "supportsChartFill": true,
  },
}
`;

exports[`PluggableColumnBarCharts > optional stacking > should reuse all measures, two categories and no stack 1`] = `
{
  "buckets": [
    {
      "items": [
        {
          "aggregation": null,
          "attribute": "aazb6kroa3iC",
          "localIdentifier": "m1",
          "showInPercent": null,
          "showOnSecondaryAxis": null,
          "type": "metric",
        },
        {
          "aggregation": null,
          "attribute": "af2Ewj9Re2vK",
          "localIdentifier": "m2",
          "showInPercent": null,
          "showOnSecondaryAxis": null,
          "type": "metric",
        },
        {
          "aggregation": null,
          "attribute": "dt.opportunitysnapshot.snapshotdate",
          "localIdentifier": "m3",
          "showInPercent": null,
          "showOnSecondaryAxis": true,
          "type": "metric",
        },
        {
          "aggregation": null,
          "attribute": "acfWntEMcom0",
          "localIdentifier": "m4",
          "showInPercent": null,
          "showOnSecondaryAxis": true,
          "type": "metric",
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "aggregation": null,
          "attribute": "attr.owner.department",
          "dfRef": {
            "uri": "a1/df",
          },
          "localIdentifier": "a1",
          "type": "attribute",
        },
        {
          "aggregation": null,
          "attribute": "attr.stage.iswon",
          "dfRef": {
            "uri": "a2/df",
          },
          "localIdentifier": "a2",
          "type": "attribute",
        },
      ],
      "localIdentifier": "view",
    },
    {
      "items": [],
      "localIdentifier": "stack",
    },
  ],
  "filters": {
    "items": [
      {
        "aggregation": null,
        "attribute": "attr.owner.department",
        "filters": [
          {
            "attribute": "attr.owner.department",
            "displayFormRef": {
              "uri": "owner/attribute/df/uri",
            },
            "isInverted": false,
            "selectedElements": [
              {
                "title": "string",
                "uri": "string",
              },
            ],
            "totalElementsCount": 10,
          },
        ],
        "localIdentifier": "a1",
        "type": "attribute",
      },
      {
        "aggregation": null,
        "attribute": "attr.stage.iswon",
        "filters": [
          {
            "attribute": "attr.stage.iswon",
            "displayFormRef": {
              "uri": "iswon/attribute/df/uri",
            },
            "isInverted": true,
            "selectedElements": [
              {
                "title": "string",
                "uri": "string",
              },
            ],
            "totalElementsCount": 10,
          },
        ],
        "localIdentifier": "a2",
        "type": "attribute",
      },
    ],
    "localIdentifier": "filters",
  },
  "properties": {
    "controls": {
      "secondary_yaxis": {
        "measures": [
          "m3",
          "m4",
        ],
      },
    },
  },
  "uiConfig": {
    "axis": "dual",
    "buckets": {
      "filters": {
        "accepts": [
          "attribute",
          "date",
        ],
        "allowsReordering": false,
        "enabled": true,
        "isShowInPercentEnabled": false,
        "itemsLimit": 20,
        "itemsLimitByType": {
          "date": 1,
        },
      },
      "measures": {
        "accepts": [
          "metric",
          "fact",
          "attribute",
        ],
        "allowsDuplicateItems": true,
        "allowsReordering": true,
        "allowsSwapping": true,
        "canAddItems": true,
        "enabled": true,
        "icon": "local:column/bucket-title-measures.svg",
        "isShowInPercentEnabled": false,
        "isShowInPercentVisible": true,
        "isShowOnSecondaryAxisVisible": true,
        "itemsLimit": 40,
        "title": "Metrics",
      },
      "stack": {
        "accepts": [
          "attribute",
        ],
        "allowsReordering": false,
        "allowsSwapping": true,
        "canAddItems": false,
        "enabled": true,
        "icon": "local:column/bucket-title-stack.svg",
        "isShowInPercentEnabled": false,
        "itemsLimit": 1,
        "title": "Stack by",
        "warningMessage": "To stack by an attribute, an visualization can have only one metric",
      },
      "view": {
        "accepts": [
          "attribute",
          "date",
        ],
        "allowsReordering": true,
        "allowsSwapping": true,
        "canAddItems": true,
        "enabled": true,
        "icon": "local:column/bucket-title-view.svg",
        "isShowInPercentEnabled": false,
        "itemsLimit": 2,
        "itemsLimitByType": {
          "date": 1,
        },
        "title": "View by",
      },
    },
    "exportConfig": {
      "supported": true,
    },
    "openAsReport": {
      "supported": true,
    },
    "optionalStacking": {
      "stackMeasures": false,
      "supported": true,
    },
    "recommendations": {
      "comparison": false,
      "overTimeComparison": false,
      "percent": false,
      "previousPeriod": false,
      "supportsFilteringRecommendation": true,
      "trending": false,
    },
    "supportedOverTimeComparisonTypes": [
      "same_period_previous_year",
      "previous_period",
    ],
    "supportsChartFill": true,
  },
}
`;

exports[`PluggableColumnBarCharts > optional stacking > should reuse one measure, two categories and one category as stack 1`] = `
{
  "buckets": [
    {
      "items": [
        {
          "aggregation": null,
          "attribute": "aazb6kroa3iC",
          "localIdentifier": "m1",
          "showInPercent": null,
          "showOnSecondaryAxis": null,
          "type": "metric",
        },
      ],
      "localIdentifier": "measures",
    },
    {
      "items": [
        {
          "aggregation": null,
          "attribute": "attr.owner.department",
          "dfRef": {
            "uri": "a1/df",
          },
          "localIdentifier": "a1",
          "type": "attribute",
        },
        {
          "aggregation": null,
          "attribute": "attr.stage.iswon",
          "dfRef": {
            "uri": "a2/df",
          },
          "localIdentifier": "a2",
          "type": "attribute",
        },
      ],
      "localIdentifier": "view",
    },
    {
      "items": [
        {
          "attribute": "attr.owner.region",
          "dfRef": {
            "uri": "a3/df",
          },
          "localIdentifier": "a3",
          "type": "attribute",
        },
      ],
      "localIdentifier": "stack",
    },
  ],
  "filters": {
    "items": [
      {
        "aggregation": null,
        "attribute": "attr.owner.department",
        "filters": [
          {
            "attribute": "attr.owner.department",
            "displayFormRef": {
              "uri": "owner/attribute/df/uri",
            },
            "isInverted": false,
            "selectedElements": [
              {
                "title": "string",
                "uri": "string",
              },
            ],
            "totalElementsCount": 10,
          },
        ],
        "localIdentifier": "a1",
        "type": "attribute",
      },
      {
        "aggregation": null,
        "attribute": "attr.stage.iswon",
        "filters": [
          {
            "attribute": "attr.stage.iswon",
            "displayFormRef": {
              "uri": "iswon/attribute/df/uri",
            },
            "isInverted": true,
            "selectedElements": [
              {
                "title": "string",
                "uri": "string",
              },
            ],
            "totalElementsCount": 10,
          },
        ],
        "localIdentifier": "a2",
        "type": "attribute",
      },
      {
        "attribute": "attr.owner.region",
        "filters": [
          {
            "attribute": "attr.owner.region",
            "displayFormRef": {
              "uri": "owner/attribute/df/uri",
            },
            "isInverted": true,
            "selectedElements": [],
            "totalElementsCount": 10,
          },
        ],
        "localIdentifier": "a3",
        "type": "attribute",
      },
    ],
    "localIdentifier": "filters",
  },
  "properties": {},
  "uiConfig": {
    "buckets": {
      "filters": {
        "accepts": [
          "attribute",
          "date",
        ],
        "allowsReordering": false,
        "enabled": true,
        "isShowInPercentEnabled": false,
        "itemsLimit": 20,
        "itemsLimitByType": {
          "date": 1,
        },
      },
      "measures": {
        "accepts": [
          "metric",
          "fact",
          "attribute",
        ],
        "allowsDuplicateItems": true,
        "allowsReordering": true,
        "allowsSwapping": true,
        "canAddItems": false,
        "enabled": true,
        "icon": "local:column/bucket-title-measures.svg",
        "isShowInPercentEnabled": false,
        "isShowInPercentVisible": true,
        "isShowOnSecondaryAxisVisible": true,
        "itemsLimit": 40,
        "title": "Metrics",
        "warningMessage": "To add additional metric, remove <span class="attr-field-icon" /> from <span class="stack-by">stack by</span>",
      },
      "stack": {
        "accepts": [
          "attribute",
        ],
        "allowsReordering": false,
        "allowsSwapping": true,
        "canAddItems": true,
        "enabled": true,
        "icon": "local:column/bucket-title-stack.svg",
        "isShowInPercentEnabled": false,
        "itemsLimit": 1,
        "title": "Stack by",
      },
      "view": {
        "accepts": [
          "attribute",
          "date",
        ],
        "allowsReordering": true,
        "allowsSwapping": true,
        "canAddItems": true,
        "enabled": true,
        "icon": "local:column/bucket-title-view.svg",
        "isShowInPercentEnabled": false,
        "itemsLimit": 2,
        "itemsLimitByType": {
          "date": 1,
        },
        "title": "View by",
      },
    },
    "exportConfig": {
      "supported": true,
    },
    "openAsReport": {
      "supported": true,
    },
    "optionalStacking": {
      "stackMeasures": false,
      "supported": true,
    },
    "recommendations": {
      "comparison": false,
      "overTimeComparison": false,
      "percent": false,
      "previousPeriod": false,
      "supportsFilteringRecommendation": true,
      "trending": false,
    },
    "supportedOverTimeComparisonTypes": [
      "same_period_previous_year",
      "previous_period",
    ],
    "supportsChartFill": true,
  },
}
`;
